--- a/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
+++ b/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
@@ -26,12 +26,12 @@
   <div fxLayout="row" fxLayoutGap="10px">
     <mat-form-field>
       <mat-label>Start Time</mat-label>
-      <input matInput formControlName="startTime">
+      <input type="time" matInput formControlName="startTime">
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>End Time</mat-label>
-      <input matInput formControlName="endTime">
+      <input type="time" matInput formControlName="endTime">
     </mat-form-field>
   </div>
 
@@ -65,31 +65,13 @@
 
   <mat-form-field>
     <mat-label>Status</mat-label>
-    <!-- <mat-select [formControl]="statusOptions" formControlName="status"> -->
     <mat-select formControlName="status">
       <mat-option *ngFor="let status of statusOptions" value="{{status}}">{{status | titlecase}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
 
-<!-- <mat-card>
-  <mat-card-title style="margin: 10px;">Upload Event Images</mat-card-title>
-  <mat-card-content>
-    <input type="file" (change)="onFileSelected($event)" multiple>
-    <div *ngIf="images.length > 0">
-      <mat-list>
-        <mat-list-item *ngFor="let image of images; let i = index">
-          <img [src]="image.preview || image.url" alt="Image preview" width="100px" height="100px">
-          <button mat-button color="warn" (click)="removeImage(i)">Remove</button>
-        </mat-list-item>
-      </mat-list>
-    </div>
-    <p *ngIf="images.length >= 5" class="text-danger">You can only upload up to 5 images.</p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="uploadImages()" [disabled]="images.length === 0">Upload Images</button>
-  </mat-card-actions>
-</mat-card> -->
+
 <mat-card>
   <mat-card-title style="margin: 10px;">Upload Event Images</mat-card-title>
   <mat-card-content>
