--- a/project/frontend/src/app/pages/event-details/event-details.component.html
+++ b/project/frontend/src/app/pages/event-details/event-details.component.html
@@ -55,7 +55,7 @@
           </div>
           <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <mat-icon>person</mat-icon>
-            <p><strong>Organizer:</strong> {{ event.organizer.name }}</p>
+            <p><strong>Organizer:</strong> {{ event?.organizer?.name }}</p>
           </div>
           <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <mat-icon>group</mat-icon>
