--- a/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
+++ b/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
@@ -72,7 +72,7 @@
 </div>
 
 
-<mat-card>
+<!-- <mat-card>
   <mat-card-title style="margin: 10px;">Upload Event Images</mat-card-title>
   <mat-card-content>
     <input type="file" (change)="onFileSelected($event)" multiple>
@@ -88,7 +88,12 @@
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="uploadImages()" [disabled]="images.length === 0">Upload Images</button>
   </mat-card-actions>
-</mat-card>
+</mat-card> -->
+
+<app-images-uploader
+  [images]="images"
+  (imagesChange)="onImagesChange($event)"
+></app-images-uploader>
 
 
 
