added few more featreus

--- a/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
+++ b/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
@@ -6,5 +6,7 @@
 
 <!-- <app-events-list></app-events-list> -->
 
-<app-all-events></app-all-events>
+<app-all-events
+  [isOrganizer]="true"
+></app-all-events>
 
