--- a/project/frontend/src/app/components/footer/footer.component.html
+++ b/project/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<!-- <p>footer works!</p> -->
+
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="footer-col">
+        <h4>ABC</h4>
+        <ul>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">our services</a></li>
+          <li><a href="#">privacy policy</a></li>
+          <li><a href="#">affiliate program</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>get help</h4>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">events</a></li>
+          <li><a href="#">organizers</a></li>
+          <li><a href="#">get a ticket</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>ABC EMS</h4>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">events</a></li>
+          <li><a href="#">organizers</a></li>
+          <li><a href="#">profile</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>follow us</h4>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
