--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -111,12 +111,15 @@
     <div class="internal-margin">
       <router-outlet></router-outlet>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
       <span>Copyright &copy; 2024 ABC Com</span>
       <a href="/">About Us</a>
       <a href="/">Contact</a>
-    </div>
-    <h1>JUMP</h1>
+    </div> -->
+    <!-- <h1>JUMP</h1> -->
+
+    <app-footer></app-footer>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
 
