--- a/project/frontend/src/app/pages/home/home.component.html
+++ b/project/frontend/src/app/pages/home/home.component.html
@@ -1,16 +1,16 @@
 <app-hero></app-hero>
 
-<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
   <img src="../../../assets/one.jpg" alt="Left Image" class="section-image">
   <p class="text-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex a nisi congue euismod nec nec justo.</p>
 </div>
 
-<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
   <p class="text-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex a nisi congue euismod nec nec justo.</p>
   <img src="../../../assets/two.jpg" alt="Right Image" class="section-image">
 </div>
 
-<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
   <img src="../../../assets/three.jpg" alt="Left Image" class="section-image">
   <p class="text-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex a nisi congue euismod nec nec justo.</p>
 </div>
@@ -20,7 +20,7 @@
 <div fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="40px" class="new-content-section">
 
   <h2 class="section-heading">Event Highlights</h2>
-  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
+  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
     <div class="highlight-card">
       <img src="../../../assets/one.jpg" alt="Highlight 1" class="highlight-image">
       <p class="highlight-text">Highlight 1: Amazing keynote speakers and sessions.</p>
@@ -40,26 +40,8 @@
   </div>
 
 
-  <!-- <h2 class="section-heading">Testimonials</h2>
-  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
-    <div class="testimonial-card">
-      <p class="testimonial-text">"This event was a game-changer for my business. Highly recommend!" - John Doe</p>
-    </div>
-    <div class="testimonial-card">
-      <p class="testimonial-text">"An incredible experience from start to finish. Can't wait for the next one!" - Jane Smith</p>
-    </div>
-    <div class="testimonial-card">
-      <p class="testimonial-text">"An incredible experience from start to finish. Can't wait for the next one!" - Jane Smith</p>
-    </div>
-    <div class="testimonial-card">
-      <p class="testimonial-text">"An incredible experience from start to finish. Can't wait for the next one!" - Jane Smith</p>
-    </div>
-    <div class="testimonial-card">
-      <p class="testimonial-text">"An incredible experience from start to finish. Can't wait for the next one!" - Jane Smith</p>
-    </div>
-  </div> -->
   <h2 class="section-heading">Testimonials</h2>
-  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
+  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
     <div class="testimonial-card" *ngFor="let testimonial of testimonials">
       <p class="testimonial-text">"{{ testimonial.text }}" - <strong>{{ testimonial.author }}</strong> </p>
       <div class="rating">
