--- a/project/frontend/src/app/pages/home/home.component.html
+++ b/project/frontend/src/app/pages/home/home.component.html
@@ -6,8 +6,8 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
-  <p class="text-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex a nisi congue euismod nec nec justo.</p>
-  <img src="../../../assets/two.jpg" alt="Right Image" class="section-image">
+  <p class="text-title" fxFlexOrder="1" fxFlexOrder.xs="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex a nisi congue euismod nec nec justo.</p>
+  <img src="../../../assets/two.jpg" alt="Right Image" class="section-image" fxFlexOrder="2" fxFlexOrder.xs="1">
 </div>
 
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.xs="column" fxLayoutAlign.xs="space-around center">
