--- a/project/frontend/src/app/pages/user-attend-events/user-attend-events.component.html
+++ b/project/frontend/src/app/pages/user-attend-events/user-attend-events.component.html
@@ -1,5 +1,7 @@
 
-<h2>Name of User here</h2>
+<h2>
+  Events You Are Attending - <span class="accent-color">{{user.name}}</span>
+</h2>
 
 <app-all-events
   [isUser]="true"
