--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -58,6 +58,13 @@
 
       @if (userRole == 2){ <!-- 2 means simple ADMIN - got to Role enum -->
 
+        <a mat-list-item routerLink="/profile" >
+          <span class="entry">
+            <mat-icon>person</mat-icon>
+            <span>Profile</span>
+          </span>
+        </a>
+
         <a mat-list-item routerLink="/admin" >
           <span class="entry">
             <mat-icon>admin_panel_settings</mat-icon>
