removed few bugs

--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -43,7 +43,7 @@
         <a mat-list-item routerLink="/profile/attend-events" >
           <span class="entry">
             <mat-icon>shopping_basket</mat-icon>
-            <span>Your Events</span>
+            <span>Your Attend List</span>
           </span>
         </a>
 
@@ -76,6 +76,13 @@
           <span class="entry">
             <mat-icon>theater_comedy</mat-icon>
             <span>Your Events</span>
+          </span>
+        </a>
+
+        <a mat-list-item routerLink="/profile/attend-events" >
+          <span class="entry">
+            <mat-icon>shopping_basket</mat-icon>
+            <span>Your Attend List</span>
           </span>
         </a>
 
