bought some tickets

--- a/project/frontend/src/app/pages/organization-detail/organization-detail.component.html
+++ b/project/frontend/src/app/pages/organization-detail/organization-detail.component.html
@@ -1,7 +1,7 @@
 
 <h2>
   <a [routerLink]="['/organizations']">Organizations</a>
-  <span> / {{ organization.name }}</span>
+  <span> / {{ organization.name }} - {{organization.email}}</span>
 </h2>
 
 <app-all-events
