--- a/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
+++ b/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
@@ -84,8 +84,9 @@
   <div fxLayout="row" fxLayoutGap="10px">
   <mat-form-field floatLabel="always">
     <mat-label>Ticket Price</mat-label>
-    <input matInput value="{{this.receivedEvent.ticketPrice}}" type="number" placeholder="0" formControlName="ticketPrice">
     <span matTextPrefix>$&nbsp;</span>
+    <!-- <input matInput value="{{this.receivedEvent.ticketPrice}}" type="number" placeholder="0" formControlName="ticketPrice"> -->
+    <input matInput type="number" formControlName="ticketPrice">
     <!-- <mat-hint>Enter 0 if the event is free</mat-hint> -->
     @if (ticketPrice.hasError('required')) {
       <mat-error>Ticket Price is <strong>required</strong></mat-error>
