implemented return ticket

--- a/project/frontend/src/app/components/event-card/event-card.component.css
+++ b/project/frontend/src/app/components/event-card/event-card.component.css
@@ -33,6 +33,11 @@
   color: white;
 }
 
+.return-button {
+  background-color: #dbc64f; /* Orange */
+  color: white;
+}
+
 /* Ensure buttons have a consistent look */
 button.mat-flat-button {
   margin: 5px;
