--- a/project/frontend/src/app/components/event-card/event-card.component.html
+++ b/project/frontend/src/app/components/event-card/event-card.component.html
@@ -27,6 +27,9 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="showDetails()">Show Details</button>
+    <button mat-button style="margin-right: 5px;" (click)="showDetails()">Show Details</button>
+    @if(event.status.toLowerCase() === 'upcoming' && isReturnAble){
+      <button mat-flat-button (click)="callReturnTicket()" class="return-button">Return Ticket</button>
+    }
   </mat-card-actions>
 </mat-card>
